--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     restart: on-failure
     networks:
       - client-side
+      - caddy
     ports:
       - "3000:3000"
     depends_on:
@@ -49,6 +50,8 @@ services:
 networks:
   client-side: {}
   server-side: {}
+  caddy:
+    external: true
 
 volumes:
   db-data: {}
