--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,8 +42,8 @@ services:
       - POSTGRES_DB=portfolio
     networks:
       - server-side
-    expose:
-      - 5432
+    ports:
+      - 5432:5432
     volumes:
       - db-data:/var/lib/postgresql/data
     healthcheck:
