chore(api): small makefile fixes

--- a/api/Makefile
+++ b/api/Makefile
@@ -1,13 +1,13 @@
-include ../.env*
+-include ../.env*
 
 .PHONY: migrate/top
 migrate/top:
-	@tern migrate --migrations migrations --user $(POSTGRES_USER) --password $(POSTGRES_PASSWORD)
+	@tern migrate --migrations migrations --user ${POSTGRES_USER} --password ${POSTGRES_PASSWORD}
 
 .PHONY: migrate/up
 migrate/up:
-	@tern migrate --destination +1 --migrations migrations --user $(POSTGRES_USER) --password $(POSTGRES_PASSWORD)
+	@tern migrate --destination +1 --migrations migrations --user ${POSTGRES_USER} --password ${POSTGRES_PASSWORD}
 
 .PHONY: migrate/down
 migrate/down:
-	@tern migrate --destination -1 --migrations migrations --user $(POSTGRES_USER) --password $(POSTGRES_PASSWORD)
+	@tern migrate --destination -1 --migrations migrations --user ${POSTGRES_USER} --password ${POSTGRES_PASSWORD}
