chore(api): add default target to the Makefile

--- a/api/Makefile
+++ b/api/Makefile
@@ -1,13 +1,17 @@
 -include ../.env*
 
-.PHONY: migrate/top
-migrate/top:
-	@tern migrate --migrations migrations --user ${POSTGRES_USER} --password ${POSTGRES_PASSWORD}
+.PHONY: default all
 
-.PHONY: migrate/up
-migrate/up:
-	@tern migrate --destination +1 --migrations migrations --user ${POSTGRES_USER} --password ${POSTGRES_PASSWORD}
+default:
+	@echo "Please specify the target."
 
-.PHONY: migrate/down
-migrate/down:
-	@tern migrate --destination -1 --migrations migrations --user ${POSTGRES_USER} --password ${POSTGRES_PASSWORD}
+all: migrate-top migrate-up migrate-down
+
+migrate-top:
+	@tern migrate -m migrations --user ${POSTGRES_USER} --password ${POSTGRES_PASSWORD}
+
+migrate-up:
+	@tern migrate -d +1 -m migrations --user ${POSTGRES_USER} --password ${POSTGRES_PASSWORD}
+
+migrate-down:
+	@tern migrate -d -1 -m migrations --user ${POSTGRES_USER} --password ${POSTGRES_PASSWORD}
