--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/inter": "^4.5.14",
+    "@fontsource/jetbrains-mono": "^4.5.11",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
